force-app/main/default/objects/Billing_Center_Column_Config__c/Billing_Center_Column_Config__c.object-meta.xml
<CustomObject>
    <description>Defines table columns.</description>
    <label>Billing Center Column Config</label>
    <nameField>
        <displayFormat>BCCOL-{00000}</displayFormat>
        <label>Billing Center Column Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Center Column Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>