force-app/main/default/objects/Billing_Center_Column_Config__c/fields/Is_Sortable__c.field-meta.xml
<CustomField>
    <fullName>Is_Sortable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Sortable</label>
    <type>Checkbox</type>
</CustomField>