force-app/main/default/objects/Billing_Center_Column_Config__c/fields/Link_Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Link_Target_Field__c</fullName>
    <label>Link Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>